# devops

./: README.md
Conan/: CMakeLists.txt  conanfile.txt  Логи сборки.txt
Conan/src/: hello.cpp
dynamic library/: CMakeLists.txt  Dockerfile
dynamic library/docker/: docker.txt
dynamic library/Логи сборки/: linux_x86.txt  linux_x86_64.txt  windows_x86.txt  windows_x86_64.txt
